[package]
name = "lolbench-cli"
version = "0.0.1"

# NOTE(anp): while this crate isn't used directly for code in the bench crates, it *is* the
# workspace root, which means that its profiles apply to everything in the workspace.
[profile.dev]
opt-level = 1
debug = 1

[dependencies]
chrono = "0.4"
clap = "^2.31.1"
failure = "0.1"
log = "0.4"
lolbench_support = { path = "./support" }
simple_logger = "0.5"
structopt = { version = "0.2", default-features = false }

[workspace]
members = [
    "./benches/brotli_1_1_3",
    "./benches/crossbeam_epoch_0_4_0",
    "./benches/diesel_1_1_1",
    "./benches/doom_9e197d7",
    "./benches/inflate_0_3_4",
    "./benches/json_benchmark_c7d3d9b",
    "./benches/nom_4_0_0_beta1",
    "./benches/quickcheck_0_6_1",
    "./benches/rayon_1_0_0",
    "./benches/raytrace_8de9020",
    "./benches/regex_0_2_6",
    "./benches/snap_0_2_4"
]
