[package]
name = "lolbench"
version = "0.0.1"

# NOTE(anp): while this crate isn't used directly for code in the bench crates, it *is* the
# workspace root, which means that its profiles apply to everything in the workspace.
[profile.dev]
opt-level = 1
debug = 1

[profile.test]
opt-level = 1
debug = 1

[profile.release]
opt-level = 3
codegen-units = 1
incremental = false

[dependencies]
byteorder = "^1.2"
chrono = { version = "0.4", features = ["serde"] }
clap = "^2.31.1"
criterion = { version = "0.2.0", path = "./criterion", features = ["pmu"] }
failure = "0.1"
git2 = "0.7"
glob = "0.2"
log = "0.4"
lolbench_support = { path = "./support" }
marky_mark = { path = "./marky_mark" }
noisy_float = { version = "0.1", features = ["serde-1"] }
ring = "0.13"
serde = "1"
serde_derive = "1"
serde_json = "1"
simple_logger = "0.5"
slug = "0.1"
structopt = { version = "0.2", default-features = false }

[dev-dependencies]
proptest = "0.7"
tempfile = "3"

[workspace]
members = [
    "./benches/brotli_1_1_3",
    "./benches/crossbeam_epoch_0_4_0",
    "./benches/diesel_1_1_1",
    "./benches/doom_9e197d7",
    "./benches/inflate_0_3_4",
    "./benches/json_benchmark_c7d3d9b",
    "./benches/nom_4_0_0_beta1",
    "./benches/quickcheck_0_6_1",
    "./benches/rayon_1_0_0",
    "./benches/raytrace_8de9020",
    "./benches/regex_0_2_6",
    "./benches/snap_0_2_4"
]
