[package]
name = "marky_mark"
version = "0.1.0"
authors = ["Adam Perry <adam.n.perry@gmail.com>"]
description = "crate for generating and parsing machine-readable benchmark specs in rust binaries"

[dependencies]
# accept any version of this so that it "unifies" with the sha2 version
digest = "*"
failure = "0.1"
# accept any version of this so that it "unifies" with the sha2 version
generic-array = { version = "*", features = ["serde"] }
proc-macro2 = "0.4"
quote = "0.6"
serde = "1"
serde_derive = "1"
serde_json = "1"
sha2 = "0.7"
syn = { version = "0.14", features = [ "extra-traits", "parsing", "full" ] }
toml = "0.4"

[dev-dependencies]
tempfile = "3"
