[package]
name = "lolbench_support"
version = "0.1.0"
authors = ["Adam Perry <adam.n.perry@gmail.com>"]

[dependencies]
byteorder = "^1.2"
chrono = { version = "0.4", features = ["serde"] }
criterion = { version = "0.2.0", path = "../criterion", features = ["pmu"] }
failure = "0.1"
glob = "0.2"
log = "0.4"
lolbench_extractor = { path = "../extractor" }
marky_mark = { path = "../marky_mark" }
noisy_float = { version = "0.1", features = ["serde-1"] }
proc-macro-hack = "0.4"
ring = "0.13"
serde = "1"
serde_derive = "1"
serde_json = "1"
simple_logger = "*"
slug = "0.1"

[dev-dependencies]
proptest = "0.7"
tempfile = "3"
