[package]
name = "diesel_1_1_1"
version = "0.1.0"
authors = ["Adam Perry <adam.n.perry@gmail.com>"]

[dependencies]
criterion = { version = "*", path = "../../criterion" }
diesel = { version = "1.1.1", features = ["sqlite"] }
diesel_migrations = "1.1.0"
lolbench_support = { path = "../../lolbench_support" }
libsqlite3-sys = { version = "*", features = ["bundled"] }
