[package]
name = "diesel_1_1_1"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
criterion = { version = "*", path = "../../criterion" }
diesel = { version = "1.4.6", features = ["sqlite"] }
diesel_migrations = "1.1.0"
lolbench_support = { path = "../../support" }
libsqlite3-sys = { version = "*", features = ["bundled"] }

[dev-dependencies]
lolbench = { path = "../../" }
