[package]
name = "rayon_1_0_0"
version = "0.0.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
publish = false
license = "Apache-2.0/MIT"

[dependencies]
rayon = "1.0.0"
cgmath = "0.16"
fixedbitset = "0.1.5"
glium = "0.20"
lazy_static = "1"
odds = "0.3"
num = "0.1.30"
rand = ">= 0.3, < 0.5"
regex = "0.2"
serde = "1"
serde_derive = "1"
time = "0.1"
lolbench_support = { path = "../../support" }

[dev-dependencies]
lolbench = { path = "../../" }
