[package]
publish = false
name = "regex_0_2_6"
version = "0.1.0"
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-lang/regex"
documentation = "https://docs.rs/regex"
homepage = "https://github.com/rust-lang/regex"
description = "Regex benchmarks for Rust's and other engines."

[dependencies]
criterion = { version = "*", path = "../../criterion" }
lazy_static = "1"
regex = "0.2.6"
regex-syntax = "0.4.0"
serde = "1"
serde_derive = "1"
wrap_libtest = { path = "../../wrap_libtest" }
