[package]
name = "sha3_0_8_0"
version = "0.1.0"
authors = ["Thom Wiggers <thom@thomwiggers.nl>"]
license = "MIT/Apache-2.0"

[dependencies]
lolbench_support = { path = "../../support" }
sha3 = "=0.8.0"
digest = "=0.8.0"

[dev-dependencies]
lolbench = { path = "../../" }

[features]
default = ["std"]
std = ["digest/std"]
